fixing up prior to rubygems release

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,6 +1,17 @@
 = ruby-tcl
 
-Description goes here.
+A minimal Ruby interface to libtcl. The library was originally written
+by Sam Stephenson.  This edition was created by Mark J. Titorenko.
+
+This fork uses the original C bindings written by Sam Stephenson in
+order to integrate with libtcl.  For a FFI implementation, see
+https://github.com/factorypreset/ruby-tcl (which also contains some
+other additions/improvements to the library).
+
+The original codebase is located at
+https://github.com/sstephenson/ruby-tcl - this is not a direct fork of
+that codebase as it has been created from the ground up as a
+Bueller-based gem.
 
 == Note on Patches/Pull Requests
  
@@ -9,9 +20,11 @@ Description goes here.
 * Add tests for it. This is important so I don't break it in a
   future version unintentionally.
 * Commit, do not mess with rakefile, version, or history.
-  (if you want to have your own version, that is fine but bump version in a commit by itself I can ignore when I pull)
+  (if you want to have your own version, that is fine but bump version
+  in a commit by itself I can ignore when I pull)
 * Send me a pull request. Bonus points for topic branches.
 
 == Copyright
 
-Copyright (c) 2011 Mark J. Titorenko. See LICENSE for details.
+Copyright (c) 2008-2001 Sam Stephenson and Mark J. Titorenko. See
+LICENSE for details.
